Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8292

unnecessary LustreError 17754:0:(file.c:1900:ll_do_fiemap()) obd_get_info failed: rc = -95

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • Lustre 2.5.5
    • RHEL6.7 and RHEL7.2
      lustre-2.5.5-7chaos_2.6.32_642.1.1.1chaos.ch5.5.x86_64.x86_64
      lustre-2.8.0_0.0.llnlpreview.13-1.ch6.x86_64
      ZFS used as backend file system
    • 3
    • 9223372036854775807

      With ZFS backend, ioctl(fd, FS_IOC_FIEMAP, fiemap) on the client results in an obd_get_info call to the OST(s).
      ZFS does not support FIEMAP, and so the dt_fiemap_get() call returns -ENOTSUPP. When the RPC reply is received by the client, two LustreError messages are sent to the console:

      2016-06-16 10:04:23 LustreError: 11-0: lcy-OST0004-osc-ffff88044702bc00: Communicating with 10.1.1.175@o2ib9, operation ost_get_info failed with -95.
      2016-06-16 10:04:23 LustreError: 3698:0:(file.c:1900:ll_do_fiemap()) obd_get_info failed: rc = -95
      

      Since the user is notified of the ioctl failure, and the failure does not result in any compromise of the file system or the file data, this should not produce a console message.

      The RHEL6 cp command did not use this ioctl, but the RHEL7 one does. So with RHEL7 this has become much more noticable.

            utopiabound Nathaniel Clark
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: