LU-8292 llite: Decrease verbosity if ll_do_fiemap

Because the user is returned the error, do not log the failure to the
console also.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Ie96c234a04bec936f107af707ef15c17562f0f3e